# pandemic-cli

./: .gitignore  CLAUDE.md  Cargo.toml  DO_NOT_READ.md  README.md  install_and_play.sh  run
.claude/: settings.json  statusline.sh
.claude/agents/: playtest.md
.claude/hooks/: md-write-check.py  notify.sh  ownership-reminder.sh  reflection-stop-hook.py  session-start-check.py  snapshot-limit.py  (+1 more)
docs/: architecture.md  disease-model-plan.md  drug-inspiration.md  framing-guide.md  gameplay-reference.md  gameplay.md  medicine-design.md  naming-style.md  pathogen-inspiration.md  setting.md  target-architecture.md
playtests/: 2026-03-07-143022.md  2026-03-07-180500.md  2026-03-07-201500.md  2026-03-07-playtest.md  2026-03-08-120000.md  2026-03-08-180000.md  2026-03-08-190000.md  2026-03-08-200000.md  playtest_20260308_040307.md  playtest_20260308_043306.md  playtest_20260308_050309.md  playtest_20260308_053305.md  playtest_20260308_060306.md  playtest_20260308_063306.md  playtest_20260308_070306.md  playtest_20260308_073306.md  playtest_20260308_080311.md  playtest_20260308_083312.md  playtest_20260308_090310.md  playtest_20260308_093309.md  playtest_20260308_100312.md  playtest_20260308_103310.md  playtest_20260308_133149.md  playtest_20260308_140145.md  playtest_20260308_143149.md  playtest_20260308_150144.md  playtest_20260308_154841.md  playtest_20260308_160137.md  playtest_20260308_163240.md  playtest_20260308_170807.md
src/: action.rs  engine.rs  events.rs  lib.rs  main.rs  persistence.rs  snapshot.rs  state.rs
tests/: resume_invariants.rs  snapshots.rs
(+79 files in other folders)
