[package]
name = "pandemic-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "pandemic_cli_lib"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }

[dev-dependencies]
insta = "1"
